# libtaylor

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  LICENSE  README.md  asinh-sumalt.py  asinh_hypergeometric.tm  ctaylor.hpp  ctaylor_math.hpp  example.cpp  micromath.hpp  polymul.hpp  polyops.cpp  polyops.hpp  polyops.tex  stackless_math.cpp  taylor.h  taylor.hpp  taylor_impl.hpp  taylor_math.h  taylor_math.hpp  tmath.hpp  unittest_taylor.cpp
cmake/: taylorConfig.cmake.in
pytaylor/: CMakeLists.txt  __init__.py  _pytaylor.cpp  pytaylor.cpp  test.py  test_taylor_import.py
tests/: CMakeLists.txt  test_bivariate.py  test_univariate.py  unittest_taylor.cpp
tests/use_taylor/: CMakeLists.txt  use_taylor.cpp
trunk/: example.cpp  polymul.h  taylor.h  taylor_math.h  unittest_taylor.cpp
